--- a/index.jade
+++ b/index.jade
@@ -6,6 +6,7 @@ html
     link(rel="stylesheet",type="text/css",href="index.css")
     script(type="text/javascript",src="jquery-1.10.2.min.js")
     script(type="text/javascript",src="bootstrap3.min.js")
+    script(type="text/javascript",src="howler.min.js")
     script(type="text/javascript",src="index.js")
   body
     #timer ????
